# MiniProd_Agent2_WorkflowAgents_T5_2025

./: .gitmodules  README.md  deletegit.sh  gitclone.sh
MiniProd_Agent2_WorkflowAgents_T5_2025/: gitclone.sh
MiniProd_Agent2_WorkflowAgents_T5_2025/personalized-ai-coach/: .gitignore  app.py  build_docker.sh  docker-compose.yml  worker_tools.py
MiniProd_Agent2_WorkflowAgents_T5_2025/robot-ai-lesson/: .gitignore  Dockerfile  build_docker.sh  docker-compose.yml
MiniProd_Agent2_WorkflowAgents_T5_2025/robot-ai-tool/: Dockerfile.worker  benchmark.py  build_docker.sh
MiniProd_Agent2_WorkflowAgents_T5_2025/robot-ai-workflow/: app.py  requirement.txt
docs/: bug1_pushcodeGithub.md  docs1_.md  docs1_submodules.md  docs_submodules.md
ver1_20250625/docs/: docs2.2_Technical Architecture Analysis.md  docs2_All_AI Engineering Architecture Report.md
ver1_20250625/personalized-ai-coach/: Dockerfile  Dockerfile.worker
ver1_20250625/pika-mem0/: docker-compose.yml  test_check.py  test_extract.py
ver1_20250625/robot-ai-lesson/: app.py  config.yml
ver1_20250625/robot-ai-tool/: Dockerfile  app.py  config.yml  docker-compose.yml  rabbitmq.conf
ver1_20250625/robot-ai-workflow/: Dockerfile  Dockerfile.worker  build_docker.sh  docker-compose.yml
ver_dev_20250625/pika-mem0/: .gitignore  Dockerfile  README.md  milvus_mem0.py  requirements.txt
ver_dev_20250625/pika-mem0/modules/OpenAITriton/: pyproject.toml
ver_dev_20250625/pika-mem0/modules/OpenAITriton/src/OpenAITriton/: openai_triton.py
ver_dev_20250625/robot-ai-workflow/: .env.example  Dockerfile  READM.md  README.md  (+2 more)
(+85 files in other folders)
